# merge-sort-gtest

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  run.sh  test.bat  test.sh
src/: MergeSorter.h  main.cpp
tests/: test_mergesort.cpp
